plný název pro Prahu

--- a/_data/dashboard-teplaren.yml
+++ b/_data/dashboard-teplaren.yml
@@ -26,7 +26,7 @@ items:
   status: in-progress
   status_text: Odchod od uhlí do roku 2030
   notes: V lokalitě Mělník má do roku 2029 vzniknout první blok na zemní plyn s paroplynovým cyklem (280 MWe, s dotací z ModFondu), a do roku 2030 druhý větší blok s výkonem 650 MWe (oba mají provozní podporu, byť ten druhý jen na 520 MWe výkonu). Kromě toho má už do roku 2028 vzniknout nové zařízení na energetické využití odpadu (s dotací z ModFondu). Zdroje doplní záložní plynová kotelna.
-  owner: Skupina ČEZ, Praha
+  owner: Skupina ČEZ, hlavní město Praha
   owner_web: https://www.cez.cz/nextcez/cs/o-cez/vyrobni-zdroje/uhelne-elektrarny-a-teplarny/uhelne-elektrarny-a-teplarny-cez-v-cr/elektrarna-melnik-58183
   num_households: 250464
   munis_supplied: Praha na pravém břehu řeky (+ Praha 7), Mělník, Neratovice, Horní Počaply
